[gd_scene load_steps=7 format=3 uid="uid://ifccetlmivkq"]

[ext_resource type="Script" uid="uid://d4eo2oracgn6f" path="res://scenes/options_menu.gd" id="1_dhn0l"]
[ext_resource type="Texture2D" uid="uid://cuplud6lmltj6" path="res://assets/images/OPTIONS title.png" id="2_dhn0l"]
[ext_resource type="Texture2D" uid="uid://2krkpy0rld6k" path="res://assets/images/POINT LIMIT.png" id="3_7txom"]
[ext_resource type="Texture2D" uid="uid://dsavulpls7iiu" path="res://assets/images/LIGHT MODE.png" id="4_binsn"]
[ext_resource type="Texture2D" uid="uid://brnsy5qfcumbb" path="res://assets/images/RESET DATA.png" id="5_2f1bn"]
[ext_resource type="Texture2D" uid="uid://col6esxwts2ne" path="res://assets/images/BACK.png" id="6_k61yy"]

[node name="OptionsMenu" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 768.0
offset_bottom = 432.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dhn0l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -768.0
offset_bottom = -432.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="OptionsLayout" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OptionsLayout"]
layout_mode = 2
texture = ExtResource("2_dhn0l")
stretch_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsLayout"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="OptionsLayout/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_7txom")
stretch_mode = 3

[node name="PointLimitSpinBox" type="SpinBox" parent="OptionsLayout/HBoxContainer"]
layout_mode = 2
max_value = 999.0
value = 10.0
alignment = 1

[node name="LightModeCheckBox" type="CheckBox" parent="OptionsLayout"]
layout_mode = 2
icon = ExtResource("4_binsn")
flat = true
icon_alignment = 1

[node name="ResetDataButton" type="Button" parent="OptionsLayout"]
layout_mode = 2
icon = ExtResource("5_2f1bn")
flat = true
icon_alignment = 1

[node name="BackButton" type="Button" parent="OptionsLayout"]
layout_mode = 2
icon = ExtResource("6_k61yy")
flat = true
icon_alignment = 1

[connection signal="value_changed" from="OptionsLayout/HBoxContainer/PointLimitSpinBox" to="." method="_on_point_limit_spin_box_value_changed"]
[connection signal="toggled" from="OptionsLayout/LightModeCheckBox" to="." method="_on_light_mode_check_box_toggled"]
[connection signal="pressed" from="OptionsLayout/ResetDataButton" to="." method="_on_reset_data_button_pressed"]
[connection signal="pressed" from="OptionsLayout/BackButton" to="." method="_on_back_button_pressed"]
